--- a/cobigen-cli/cli/pom.xml
+++ b/cobigen-cli/cli/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>6.1.0-SNAPSHOT</version>
+      <version>6.1.0</version>
     </dependency>
     <dependency>
       <groupId>info.picocli</groupId>
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>class-loader-agent</artifactId>
-      <version>1.2.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <!-- We need an agent loader for the JUnit tests in Eclipse -->
     <dependency>
