--- a/cobigen-eclipse/cobigen-eclipse/.classpath
+++ b/cobigen-eclipse/cobigen-eclipse/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/core-6.2.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/core-api-6.2.0-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/"/>
@@ -28,7 +30,5 @@
 	<classpathentry exported="true" kind="lib" path="lib/logback-core-1.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mmm-util-core-7.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.21.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/core-6.1.0.jar" sourcepath="/core"/>
-	<classpathentry exported="true" kind="lib" path="lib/core-api-6.1.0.jar" sourcepath="/core-api"/>
 	<classpathentry kind="output" path="eclipse-target/classes"/>
 </classpath>
