--- a/cobigen-templates/templates-devon4j/pom.xml
+++ b/cobigen-templates/templates-devon4j/pom.xml
@@ -52,6 +52,11 @@
       <version>2.0.0</version>
     </dependency>
     <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+      <version>2.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>3.10.0</version>
