--- a/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
+++ b/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core-api</artifactId>
-      <version>6.1.0-SNAPSHOT</version>
+      <version>6.1.0</version>
     </dependency>
 
     <dependency>
@@ -45,7 +45,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core</artifactId>
-      <version>6.1.0-SNAPSHOT</version>
+      <version>6.1.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
