--- a/cobigen/cobigen-tsplugin/pom.xml
+++ b/cobigen/cobigen-tsplugin/pom.xml
@@ -26,12 +26,12 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>6.2.0</version>
+      <version>[6.2.0,)</version>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core</artifactId>
-      <version>6.2.0</version>
+      <version>[6.2.0,)</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
