--- a/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
+++ b/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
@@ -39,7 +39,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core-test</artifactId>
-      <version>6.1.0-SNAPSHOT</version>
+      <version>6.1.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
