--- a/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
+++ b/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>javaplugin</artifactId>
   <name>CobiGen - Java Plug-in</name>
-  <version>2.2.2-SNAPSHOT</version>
+  <version>2.2.2</version>
   <packaging>jar</packaging>
   <description>CobiGen - Java Plug-in</description>
 
