--- a/cobigen/cobigen-xmlplugin/pom.xml
+++ b/cobigen/cobigen-xmlplugin/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <artifactId>lexeme</artifactId>
       <groupId>com.github.maybeec</groupId>
-      <version>1.1.0-SNAPSHOT</version>
+      <version>1.1.0</version>
     </dependency>
 
     <dependency>
