--- a/cobigen/cobigen-core-parent/cobigen-core-systemtest/pom.xml
+++ b/cobigen/cobigen-core-parent/cobigen-core-systemtest/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>tempeng-freemarker</artifactId>
-      <version>2.0.0</version>
+      <version>2.2.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
