--- a/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
+++ b/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core-api</artifactId>
-      <version>6.1.0</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
     </dependency>
 
     <dependency>
@@ -39,7 +39,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core-test</artifactId>
-      <version>6.1.0</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
       <scope>test</scope>
     </dependency>
     <dependency>
