--- a/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
+++ b/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
@@ -45,13 +45,13 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core</artifactId>
-      <version>6.1.0</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>tempeng-freemarker</artifactId>
-      <version>2.0.0</version>
+      <version>2.2.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
 
