--- a/cobigen/cobigen-templateengines/cobigen-tempeng-velocity/pom.xml
+++ b/cobigen/cobigen-templateengines/cobigen-tempeng-velocity/pom.xml
@@ -42,7 +42,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>javaplugin</artifactId>
-      <version>2.0.0</version>
+      <version>2.2.4-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
