--- a/cobigen/cobigen-htmlplugin/pom.xml
+++ b/cobigen/cobigen-htmlplugin/pom.xml
@@ -20,12 +20,12 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>5.0.0</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>5.0.0</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
       <scope>test</scope>
     </dependency>
     <dependency>
