--- a/cobigen/cobigen-jsonplugin/pom.xml
+++ b/cobigen/cobigen-jsonplugin/pom.xml
@@ -20,13 +20,13 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>5.0.0</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
       <version>5.0.0</version>
-      <scope>test</scope>
+      <scope>[6.2.0-SNAPSHOT,)</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
     <dependency>
