--- a/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/pom.xml
+++ b/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>6.1.0-SNAPSHOT</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
     </dependency>
     <dependency>
       <groupId>com.reprezen.kaizen</groupId>
@@ -43,19 +43,19 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>6.1.0-SNAPSHOT</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core</artifactId>
-      <version>6.1.0-SNAPSHOT</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>tempeng-freemarker</artifactId>
-      <version>2.0.0</version>
+      <version>2.0.2-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
