--- a/cobigen/cobigen-propertyplugin/pom.xml
+++ b/cobigen/cobigen-propertyplugin/pom.xml
@@ -20,14 +20,14 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>5.0.0</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
     </dependency>
     
     <!-- Test dependencies -->
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>5.0.0</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
       <scope>test</scope>
     </dependency>
     <dependency>
