--- a/cobigen/cobigen-textmerger/pom.xml
+++ b/cobigen/cobigen-textmerger/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>5.0.0</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
     <dependency>
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>5.0.0</version>
+      <version>[6.2.0-SNAPSHOT,)</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
