--- a/cobigen/cobigen-templateengines/cobigen-tempeng-freemarker/pom.xml
+++ b/cobigen/cobigen-templateengines/cobigen-tempeng-freemarker/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>tempeng-freemarker</artifactId>
   <name>CobiGen - FreeMarker Template Engine</name>
-  <version>2.2.0-SNAPSHOT</version>
+  <version>[7.0.0-SNAPSHOT,)</version>
   <packaging>jar</packaging>
   <description>CobiGen - FreeMarker Template Engine</description>
 
@@ -21,12 +21,12 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>6.2.0-SNAPSHOT</version>
+      <version>[7.0.0-SNAPSHOT,)</version>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>6.2.0-SNAPSHOT</version>
+      <version>[7.0.0-SNAPSHOT,)</version>
       <scope>test</scope>
     </dependency>
 
