--- a/cobigen/cobigen-jsonplugin/pom.xml
+++ b/cobigen/cobigen-jsonplugin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jsonplugin</artifactId>
   <name>CobiGen - JSON Plug-in</name>
-  <version>2.2.0-SNAPSHOT</version>
+  <version>7.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>CobiGen - JSON Plug-in</description>
 
@@ -20,13 +20,13 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>[6.2.0-SNAPSHOT,)</version>
+      <version>[7.0.0-SNAPSHOT,)</version>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>5.0.0</version>
-      <scope>[6.2.0-SNAPSHOT,)</scope>
+      <version>[7.0.0-SNAPSHOT,)</version>
+      <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
     <dependency>
