--- a/cobigen/cobigen-xmlplugin/pom.xml
+++ b/cobigen/cobigen-xmlplugin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>xmlplugin</artifactId>
   <name>CobiGen - XML Plug-In</name>
-  <version>4.3.0-SNAPSHOT</version>
+  <version>7.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>CobiGen - XML Plug-In</description>
 
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>6.2.0-SNAPSHOT</version>
+      <version>[7.0.0-SNAPSHOT,)</version>
     </dependency>
     <dependency>
       <artifactId>lexeme</artifactId>
@@ -32,7 +32,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>6.2.0-SNAPSHOT</version>
+      <version>7.0.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
 
@@ -47,13 +47,13 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core</artifactId>
-      <version>6.2.0-SNAPSHOT</version>
+      <version>7.0.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>tempeng-freemarker</artifactId>
-      <version>2.0.0</version>
+      <version>7.0.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
